--- a/mdn_clone/index.html
+++ b/mdn_clone/index.html
@@ -9,137 +9,144 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <section class="gnb-cont">
-        <nav>
-          <ul class="lnb-cont">
-            <li class="logo"></li>
-            <li><button>Technologies</button></li>
-            <li><button>References & Guides</button></li>
-            <li><button>Feedback</button></li>
+    <div class="page-wrapper">
+      <header>
+        <section class="gnb-cont">
+          <nav>
+            <ul class="lnb-cont">
+              <li class="logo"></li>
+              <li><button>Technologies</button></li>
+              <li><button>References & Guides</button></li>
+              <li><button>Feedback</button></li>
+            </ul>
+          </nav>
+          <input type="search" class="mdn-search" placeholder="Site
+          search...(Press \"/\" to focus"/>
+        </section>
+      </header>
+      <main>
+        <section class="scnd-header-cont">
+          <h1 class="mdn-title">Resources for developers, by developers.</h1>
+          <ul>
+            <li><a href="#">Web Technologies</a></li>
+            <li><a href="#">Learn Web Develoment</a></li>
+            <li><a href="#">Developer Tools</a></li>
           </ul>
-        </nav>
-        <input type="search" class="mdn-search" placeholder="Site
-        search...(Press \"/\" to focus"/>
-      </section>
-    </header>
-    <main>
-      <section class="scnd-header-cont">
-        <h1 class="mdn-title">Resources for developers, by developers.</h1>
-        <ul>
-          <li><a href="#">Web Technologies</a></li>
-          <li><a href="#">Learn Web Develoment</a></li>
-          <li><a href="#">Developer Tools</a></li>
-        </ul>
-      </section>
-      <section>
-        <h2>Hacks Blog</h2>
-        <a href="#">Read more at hacks.mozilla.org </a>
-        <article>
-          <h3>
-            <a href="#">Hacks Decoded: Thomas Park, Founder of Codepip</a>
-          </h3>
-          <p>
-            Welcome to our Hacks: Decoded Interview series! We spoke with Thomas
-            Park over email about coding, his favourite apps and his past life
-            at Mozilla. Thomas is the founder of Codepip, a platform he created
-            for coding games that helps people learn HTML, CSS, JavaScript, etc.
-            The most popular game is Flexbox Froggy.The post Hacks Decoded:
-            Thomas Park, Founder of Codepip appeared first on Mozilla Hacks -
-            the Web developer blog.
-          </p>
-          <em>Posted Wednesday, October 20, 2021 by Xavier Harding</em>
-        </article>
-        <article>
-          <h3><a href="#">Lots to see in Firefox 93!</a></h3>
-          <p>
-            Firefox 93 comes with lots of lovely updates including AVIF image
-            format support, filling of XFA-based forms in its PDF viewer and
-            protection against insecure downloads by blocking downloads relying
-            on insecure connections.The post Lots to see in Firefox 93! appeared
-            first on Mozilla Hacks - the Web developer blog.
-          </p>
-          <em>Posted Friday, October 8, 2021 by Ruth John</em>
-        </article>
-        <article>
-          <h3>
-            <a href="#"
-              >Implementing form filling and accessibility in the Firefox PDF
-              viewer</a
-            >
-          </h3>
-          <p>
-            Last year, during lockdown, many discovered the importance of PDF
-            forms when having to deal remotely with administrations and large
-            organizations like banks. Firefox supported displaying PDF forms,
-            but it didn’t support filling them: users had to print them, fill
-            them by hand, and scan them back to digital form. We decided it was
-            time to reinvest in the PDF viewer (PDF.js) and support filling PDF
-            forms within Firefox to make our users' lives easier.The post
-            Implementing form filling and accessibility in the Firefox PDF
-            viewer appeared first on Mozilla Hacks - the Web developer blog.
-          </p>
-          <em>Posted Thursday, October 7, 2021 by bdahl</em>
-        </article>
-        <article>
-          <h3><a href="#">Control your data for good with Rally</a></h3>
-          <p>
-            In a world where data and AI are reshaping society, people currently
-            have no tangible way to put their data to work for the causes they
-            believe in. To address this, we built the Rally platform, a
-            first-of-its-kind tool that enables you to contribute your data to
-            specific studies and exercise consent at a granular level. Mozilla
-            Rally puts you in control of your data while building a better
-            Internet and a better society. The post Control your data for good
-            with Rally appeared first on Mozilla Hacks - the Web developer blog.
-          </p>
-          <em>Posted Wednesday, October 6, 2021 by Melissa Thermidor</em>
-        </article>
-      </section>
+        </section>
+        <div class="cont-mdn-docs">
+          <section class="mdn-main-docs">
+            <h2>Hacks Blog</h2>
+            <a href="#">Read more at hacks.mozilla.org </a>
+            <article class="mdn-article">
+              <h3>
+                <a href="#">Hacks Decoded: Thomas Park, Founder of Codepip</a>
+              </h3>
+              <p>
+                Welcome to our Hacks: Decoded Interview series! We spoke with
+                Thomas Park over email about coding, his favourite apps and his
+                past life at Mozilla. Thomas is the founder of Codepip, a
+                platform he created for coding games that helps people learn
+                HTML, CSS, JavaScript, etc. The most popular game is Flexbox
+                Froggy.The post Hacks Decoded: Thomas Park, Founder of Codepip
+                appeared first on Mozilla Hacks - the Web developer blog.
+              </p>
+              <em>Posted Wednesday, October 20, 2021 by Xavier Harding</em>
+            </article>
+            <article class="mdn-article">
+              <h3><a href="#">Lots to see in Firefox 93!</a></h3>
+              <p>
+                Firefox 93 comes with lots of lovely updates including AVIF
+                image format support, filling of XFA-based forms in its PDF
+                viewer and protection against insecure downloads by blocking
+                downloads relying on insecure connections.The post Lots to see
+                in Firefox 93! appeared first on Mozilla Hacks - the Web
+                developer blog.
+              </p>
+              <em>Posted Friday, October 8, 2021 by Ruth John</em>
+            </article>
+            <article class="mdn-article">
+              <h3>
+                <a href="#"
+                  >Implementing form filling and accessibility in the Firefox
+                  PDF viewer</a
+                >
+              </h3>
+              <p>
+                Last year, during lockdown, many discovered the importance of
+                PDF forms when having to deal remotely with administrations and
+                large organizations like banks. Firefox supported displaying PDF
+                forms, but it didn’t support filling them: users had to print
+                them, fill them by hand, and scan them back to digital form. We
+                decided it was time to reinvest in the PDF viewer (PDF.js) and
+                support filling PDF forms within Firefox to make our users'
+                lives easier.The post Implementing form filling and
+                accessibility in the Firefox PDF viewer appeared first on
+                Mozilla Hacks - the Web developer blog.
+              </p>
+              <em>Posted Thursday, October 7, 2021 by bdahl</em>
+            </article>
+            <article class="mdn-article">
+              <h3><a href="#">Control your data for good with Rally</a></h3>
+              <p>
+                In a world where data and AI are reshaping society, people
+                currently have no tangible way to put their data to work for the
+                causes they believe in. To address this, we built the Rally
+                platform, a first-of-its-kind tool that enables you to
+                contribute your data to specific studies and exercise consent at
+                a granular level. Mozilla Rally puts you in control of your data
+                while building a better Internet and a better society. The post
+                Control your data for good with Rally appeared first on Mozilla
+                Hacks - the Web developer blog.
+              </p>
+              <em>Posted Wednesday, October 6, 2021 by Melissa Thermidor</em>
+            </article>
+          </section>
 
-      <aside>
-        <h2>Help improve MDN Web Docs</h2>
-        <article>
-          <p>
-            All parts of MDN (docs and the site itself) are created by an open
-            community of developers. Please join us! Pick one of these ways to
-            help:
-          </p>
-        </article>
+          <aside class="mdn-aside">
+            <h2>Help improve MDN Web Docs</h2>
+            <article>
+              <p>
+                All parts of MDN (docs and the site itself) are created by an
+                open community of developers. Please join us! Pick one of these
+                ways to help:
+              </p>
+            </article>
+            <ul>
+              <li><a href="#">Getting started </a></li>
+              <li><a href="#">ontributing to MDN content</a></li>
+              <li><a href="#">Contributing to the MDN codebase</a></li>
+              <li><a href="#">Updating browser compatibility data</a></li>
+            </ul>
+          </aside>
+        </div>
+      </main>
+      <footer>
+        <h2><img src="" alt="MDN Home" /><a href="#"></a></h2>
         <ul>
-          <li><a href="#">Getting started </a></li>
-          <li><a href="#">ontributing to MDN content</a></li>
-          <li><a href="#">Contributing to the MDN codebase</a></li>
-          <li><a href="#">Updating browser compatibility data</a></li>
-        </ul>
-      </aside>
-    </main>
-    <footer>
-      <h2><img src="" alt="MDN Home" /><a href="#"></a></h2>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-      <section>
-        <ul>
-          <li>MDN</li>
+          <li></li>
+          <li></li>
           <li></li>
           <li></li>
         </ul>
         <ul>
-          <li>Mozilla</li>
+          <li></li>
+          <li></li>
           <li></li>
           <li></li>
         </ul>
-      </section>
-    </footer>
+        <section>
+          <ul>
+            <li>MDN</li>
+            <li></li>
+            <li></li>
+          </ul>
+          <ul>
+            <li>Mozilla</li>
+            <li></li>
+            <li></li>
+          </ul>
+        </section>
+      </footer>
+    </div>
   </body>
 </html>
