update style till main scnd-header

--- a/mdn_clone/index.html
+++ b/mdn_clone/index.html
@@ -35,13 +35,15 @@
         </section>
       </header>
       <main>
-        <section class="scnd-header-cont">
-          <h1 class="mdn-title">Resources for developers, by developers.</h1>
-          <ul>
-            <li><a href="#">Web Technologies</a></li>
-            <li><a href="#">Learn Web Develoment</a></li>
-            <li><a href="#">Developer Tools</a></li>
-          </ul>
+        <section class="scnd-header-wrapper">
+          <div class="scnd-header-content">
+            <h1 class="mdn-title">Resources for developers, by developers.</h1>
+            <ul>
+              <li><a href="#">Web Technologies</a></li>
+              <li><a href="#">Learn Web Develoment</a></li>
+              <li><a href="#">Developer Tools</a></li>
+            </ul>
+          </div>
         </section>
         <div class="cont-mdn-docs link-effect">
           <section class="mdn-main-docs">
