--- a/mdn_clone/index.html
+++ b/mdn_clone/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"
       rel="stylesheet"
     />
     <title>MDN Clone Web</title>
@@ -29,9 +29,9 @@
           <input
             type="search"
             class="mdn-search"
-            placeholder="Site
-          search...()"
+            placeholder="Site search... (Press &ldquo;/&rdquo; to focus)"
           />
+          <span class="search-mark"></span>
         </section>
       </header>
       <main>
@@ -137,7 +137,7 @@
       <footer class="footer-link footer-wrapper">
         <section class="footer-container">
           <h2 class="footer-logo">
-            <img src="/mdn_clone/img/MDN_none.svg" alt="" /><a href="#"></a>
+            <img src="/img/MDN_none.svg" alt="" /><a href="#"></a>
           </h2>
 
           <ul class="footer-link footer-link-left">
