--- a/mdn_clone/index.html
+++ b/mdn_clone/index.html
@@ -16,23 +16,56 @@
   </head>
   <body>
     <div class="page-wrapper">
-      <header>
-        <section class="gnb-cont">
-          <nav>
-            <ul class="lnb-cont">
-              <li class="logo"></li>
-              <li><button>Technologies</button></li>
-              <li><button>References & Guides</button></li>
-              <li><button>Feedback</button></li>
-            </ul>
-          </nav>
+      <header class="header">
+        <a class="logo" href="#"
+          ><img src="/mdn_clone/img/MDN_none.svg" alt="MDN 로고"
+        /></a>
+
+        <nav class="gnb-cont">
+          <ul class="menubar">
+            <li>
+              <button>Technologies</button>
+              <!-- <ul class="menu-box">
+                  <li>Technologies Overview</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                  <li>Graphics</li>
+                  <li>HTTP</li>
+                  <li>APIs</li>
+                  <li>Browser Extensions</li>
+                  <li>MathML</li>
+                </ul> -->
+            </li>
+            <li>
+              <button>References & Guides</button>
+              <!-- <ul class="menu-box">
+                  <li>Learn web development</li>
+                  <li>Tutorials</li>
+                  <li>References</li>
+                  <li>Developer Guides</li>
+                  <li>Accessibility</li>
+                  <li>Game development</li>
+                  <li>...more docs</li>
+                </ul> -->
+            </li>
+            <li>
+              <button>Feedback</button>
+              <!-- <ul class="menu-box">
+                  <li>Send Feedback</li>
+                  <li>Contribute to MDN</li>
+                  <li>Report a content issue 🌐</li>
+                  <li>Report a platform issue 🌐</li>
+                </ul> -->
+            </li>
+          </ul>
           <input
             type="search"
             class="mdn-search"
             placeholder="Site search... (Press &ldquo;/&rdquo; to focus)"
           />
-          <span class="search-mark"></span>
-        </section>
+          <!-- <span class="search-mark"></span> -->
+        </nav>
       </header>
       <main>
         <section class="scnd-header-wrapper">
@@ -137,7 +170,7 @@
       <footer class="footer-link footer-wrapper">
         <section class="footer-container">
           <h2 class="footer-logo">
-            <img src="/img/MDN_none.svg" alt="" /><a href="#"></a>
+            <img src="/mdn_clone/img/MDN_none.svg" alt="" /><a href="#"></a>
           </h2>
 
           <ul class="footer-link footer-link-left">
